# FlappyLearn

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LAUNCH_AUDIT.md  LICENSE  PROJECT_KNOWLEDGE_BASE.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
configs/: default.json  smoke.json  train_full.json
docs/: ARCHITECTURE.md  ROADMAP.md  index.md
docs/community/: first-time-contributors.md
docs/concepts/: crossover.md  fitness-functions.md  genetic-algorithms.md  mutation.md  neat.md  neural-networks.md  neuroevolution.md  selection.md
docs/launch/: github-profile.md  marketing-assets.md  visual-specifications.md
docs/reference/: configuration.md  visualizations.md
scripts/: benchmark.py  evaluate.py  replay.py  train.py
src/flappylearn/: __init__.py  __main__.py  benchmark.py  checkpoint.py  cli.py  config.py  env.py  evaluation.py  genome.py  learner.py  policy.py  profiling.py  tracking.py  visualize.py
tests/: test_cli.py  test_env.py  test_genome.py  test_training.py  test_visualize.py
